<resources>
    <string name="app_name">PopularMovies</string>
    <string name="order_settings">Settings</string>

    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>

    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_label_top_rated">Top Rated</string>
    <string name="pref_sort_order_label_most_popular">Most Popular</string>
    <string name="pref_sort_order_label_now_playing">Now Playing</string>
    <string name="pref_sort_order_label_upcoming">Upcoming</string>
    <string name="pref_sort_order_label_latest">Latest</string>
    <string name="pref_sort_order_label_favorites">Favorites</string>

    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <string name="pref_sort_order_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_sort_order_most_popular_value" translatable="false">popular</string>
    <string name="pref_sort_order_now_playing_value" translatable="false">now_playing</string>
    <string name="pref_sort_order_upcoming_value" translatable="false">upcoming</string>
    <string name="pref_sort_order_latest_value" translatable="false">latest</string>
    <string name="pref_sort_order_favorites_value" translatable="false">favorites</string>

    <string name="pref_poster_size_label">Poster Size</string>
    <string name="pref_poster_size_label_small">Small</string>
    <string name="pref_poster_size_label_medium">Medium</string>
    <string name="pref_poster_size_label_large">Large</string>

    <string name="pref_poster_size_key" translatable="false">poster_size</string>
    <string name="pref_poster_size_small_value" translatable="false">small</string>
    <string name="pref_poster_size_medium_value" translatable="false">medium</string>
    <string name="pref_poster_size_large_value" translatable="false">large</string>


    <!-- Detail Activity-->
    <string name="detail_overview_label">OVERVIEW</string>
    <string name="detail_user_rating_label">USER RATING</string>
    <string name="detail_release_data_label">RELEASE DATE</string>
    <string name="detail_reviews_label">REVIEWS BY</string>
    <string name="detail_trailers_label">TRAILERS</string>

    <!-- default values -->
    <string name="detail_default_unavailable">Unavailable</string>

    <!-- Content descriptions-->
    <string name="detail_movie_poster">Movie Poster</string>
    <string name="detail_movie_trailer">Movie Trailer</string>
    <string name="detail_movie_review">Movie Review</string>

    <!-- Error messages-->
    <string name="detail_error_message">Movie data not available</string>

    <string name="base_url">"http://api.themoviedb.org/3/"</string>
    <string name="image_base_url">"http://image.tmdb.org/t/p/w185/"</string>
    <string name="backdrop_base_url">"http://image.tmdb.org/t/p/w500/"</string>
    <string name="youtube_base_url">"http://www.youtube.com/watch?v="</string>
    <string name="an_error_occurred">"An error occurred"</string>
    <string name="no_movies_in_list">"No movies in list!"</string>
    <string name="added_to_favorites">"Added to Favorites"</string>
    <string name="removed_from_favorites">"Removed from Favorites"</string>
    <string name="action">"Action"</string>
    <string name="share_trailer_to">"Share Trailer to:"</string>
    <string name="no_trailers_available_for_this_movie">"No trailers available for sharing for this movie!"</string>
    <string name="review_by">"Review by: "</string>
    <string name="movie_position">"MOVIE_POSITION</string>
</resources>
