<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MovieDetailsActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/detail_movie_poster"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_overview_label"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_default_unavailable"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_release_data_label"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/release_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_default_unavailable"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_user_rating_label"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/user_rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_default_unavailable"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/favorite_iv"
                    android:layout_width="87dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/detail_movie_poster"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" />

            </LinearLayout>
            <TextView
                android:id="@+id/reviews_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_reviews_label"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_rv"
                android:layout_width="395dp"
                android:layout_height="152dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/trailers_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_trailers_label"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_rv"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_share_24px" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>